--- a/app/src/main/res/layout/include_post_text.xml
+++ b/app/src/main/res/layout/include_post_text.xml
@@ -19,9 +19,8 @@
         android:id="@+id/post_body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ellipsize="marquee"
-        android:maxLines="1"
-        style="@style/TextAppearance.AppCompat.Notification.Info"
+        android:singleLine="true"
+        style="@style/TextAppearance.AppCompat.Small"
         tools:text="@string/lorem" />
 
 </LinearLayout>
