--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -80,7 +80,7 @@
 
                 <TextView
                     android:id="@+id/post_used_items_count"
-                    style="@style/TextAppearance.AppCompat.Notification.Info"
+                    style="@style/TextAppearance.AppCompat.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -99,7 +99,7 @@
 
                 <TextView
                     android:id="@+id/post_items_count"
-                    style="@style/TextAppearance.AppCompat.Notification.Info"
+                    style="@style/TextAppearance.AppCompat.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
